<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.wms.activity.PandianActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/pd_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pd_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selected"
            android:text="@string/pddel"
            android:textColor="@color/btn_color"/>


        <Button
            android:id="@+id/btn_pd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selected"
            android:text="@string/pandian"
            android:textColor="@color/btn_color"/>

        <Button
            android:id="@+id/btn_yp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selected"
            android:text="@string/yp"
            android:textColor="@color/btn_color"/>


        <Button
            android:id="@+id/btn_cy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selected"
            android:text="@string/cy"
            android:textColor="@color/btn_color"/>

    </LinearLayout>
</LinearLayout>
