<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.wms.activity.AsnActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="物料名称:"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_wlname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="货        主:"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_owner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/owner"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="条        码:"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_barcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/smtm"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="到达数量:"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_daoda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="实收数量:"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_shishou"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/srsl"
            android:textSize="20sp"
            android:textColor="@color/red"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:background="@drawable/login_button_style"/>
</LinearLayout>
